<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/yellowPee">

    <ImageView
        android:id="@+id/petImageView"
        android:layout_width="185dp"
        android:layout_height="160dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="114dp"
        android:contentDescription="@string/contentResPet"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[2]"
        />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/petNameTextView"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="113dp"
        android:gravity="center"
        android:text="@string/namePlaceHolder"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petImageView"
        app:bootstrapBrand="regular"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/adoptThatBoi"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="143dp"
        android:text="@string/adoptThatBoi"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petNameTextView"
        app:bootstrapBrand="regular"
        app:roundedCorners="true"
        app:showOutline="false"
        app:bootstrapSize="lg"/>

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/bioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp"
        android:text="@string/bio_title"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petTypeView"
        app:bootstrapBrand="regular"/>

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/petBioTextView"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/profile_background"
        android:text="@string/bio_hint"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bioTextView"
        app:layout_constraintTop_toTopOf="@+id/bioTextView"
        app:bootstrapBrand="regular"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/backCollapse"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="143dp"
        android:text="@string/backToRecView"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petNameTextView" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/contactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactThatBoi"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/petBioTextView"
        app:bootstrapBrand="regular"/>

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/petContactTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/profile_background"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contactTextView"
        app:layout_constraintTop_toTopOf="@+id/contactTextView"
        app:bootstrapBrand="regular"/>

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/typeView"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/pettype"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backCollapse"
        app:bootstrapBrand="regular"/>

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/petTypeView"

        android:text="@string/type"


        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="160dp"
        android:background="@drawable/profile_background"

        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/typeView"
        app:layout_constraintTop_toTopOf="@+id/typeView"
        app:bootstrapBrand="regular"/>
</androidx.constraintlayout.widget.ConstraintLayout>
