<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="151dp"
            android:layout_height="165dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="131dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="130dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/editZipCode"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="130dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_zip_code"
            android:inputType="number"
            android:maxLength="5"
            android:textColorHint="#000000"
            app:bootstrapBrand="info"
            app:bootstrapSize="lg"
            app:layout_constraintBottom_toTopOf="@+id/adopt_page_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image"
            app:showOutline="true" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/adopt_page_button"
            android:layout_width="142dp"
            android:layout_height="48dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="130dp"
            android:text="@string/adopt_page_button"
            app:bootstrapBrand="secondary"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:layout_constraintBottom_toTopOf="@+id/find_home_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editZipCode"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/find_home_button"
            android:layout_width="142dp"
            android:layout_height="48dp"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="50dp"
            android:text="@string/offer_up_page"
            app:bootstrapBrand="secondary"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adopt_page_button"
            app:roundedCorners="true"
            app:showOutline="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>